--- a/grpc.service
+++ b/grpc.service
@@ -5,8 +5,8 @@ After=network.target
 [Service]
 User=root
 Restart=always
-ExecStart=/usr/bin/python3 /opt/opshome/grpc/grpc-mqtt-start.py --config /opt/opshome/opshome.conf 
-ExecStop=/usr/bin/python3 /opt/opshome/grpc/grpc-mqtt-stop.py --config /opt/opshome/opshome.conf
+ExecStart=/usr/bin/python3 /opt/opshome/grpc/grpc-mqtt-start.py --config /opt/opshome/grpc/grpc.conf 
+ExecStop=/usr/bin/python3 /opt/opshome/grpc/grpc-mqtt-stop.py --config /opt/opshome/grpc/grpc.conf
 
 [Install]
 WantedBy=multi-user.target
